Add vertical example to the project demo. Removed fullscreen activity for add menu option for switch between fling directions.

--- a/AndTinderDemo/src/main/res/values/strings.xml
+++ b/AndTinderDemo/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TinderCard</string>
+	<string name="action_vertical">Vertical</string>
+	<string name="action_horizontal">Horizontal</string>
 </resources>
